2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Build fix.
        
        - fix build (not sure how this ever worked?)

        * kjs/nodes.cpp:
        (KJS::FunctionCallBracketNode::emitCode):

2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        - generate code for FunctionCallBracketNode

        * kjs/nodes.cpp:
        (KJS::FunctionCallBracketNode::emitCode):
        * kjs/nodes.h:

2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        - Fix two crashing SunSpider tests

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute): set up 'this' properly for native calls.
        * kjs/list.h:
        (KJS::List::List): Fix intialization of buffer and size from
        vector, the initialization order was wrong.

2008-04-01  Geoffrey Garen  <ggaren@apple.com>

        Build fix: marked ASSERT-only variables as UNUSED_PARAMs.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::symbolTableInitializeVariable):

2008-04-01  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Next step toward global code: Moved get, put, and initializeVariable
        functionality up into JSVariableObject, and changed JSActivation to
        rely on it. 

        * kjs/JSActivation.cpp:
        (KJS::JSActivation::JSActivation):
        (KJS::JSActivation::getOwnPropertySlot):
        (KJS::JSActivation::put):
        (KJS::JSActivation::initializeVariable):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::valueAt):
        (KJS::JSVariableObject::isReadOnly):
        (KJS::JSVariableObject::symbolTableGet):
        (KJS::JSVariableObject::symbolTablePut):
        (KJS::JSVariableObject::symbolTableInitializeVariable):

2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Sam.
        
        - fix HashTable assertion on some SunSpider tests